# rust-study

./: Cargo.toml
28c_call_rust/: Cargo.toml
28c_call_rust/src/: 28call_rust.c  call_rust
32hook/: Cargo.toml
32hook/src/: lib.rs
33use_hook/: Cargo.toml  build.rs
33use_hook/src/: main.rs
43attribute_macro/: Cargo.toml
43attribute_macro/src/: lib.rs
coroutine/: Cargo.toml
coroutine/c/: coroutine.c
coroutine/src/: coroutine.rs  lib.rs  main.rs  scheduler.rs
generator/: Cargo.toml  build.rs
generator/src/: co_yield.rs  gen_impl.rs  generator.rs  lib.rs  reg_context.rs  runtime.rs  scope.rs  yield_.rs
generator/src/detail/: aarch64_unix.rs  x86_64_unix.rs  x86_64_windows.rs
generator/src/register/: aarch64_unix.rs  mod.rs  x86_64_unix.rs  x86_64_windows.rs
generator/src/stack/: mod.rs  unix.rs  windows.rs
generator/tests/: lib.rs
module1/: Cargo.toml
module1/src/: main.rs
module1/src/register/: mod.rs
module1/src/stack/: error.rs  mod.rs
module2/src/: lib.rs
simple/: Cargo.toml  build.rs
simple/src/: error.rs  lib.rs
simple/src/register/: mod.rs
simple/src/register/system/: mod.rs  unix_aarch64.rs  windows_x86_64.rs
simple/src/register/system/asm/: asm_aarch64_aapcs_macho_gas.S
simple/src/stack/: mod.rs
simple/src/stack/system/: windows.rs
src/: 01function.rs  02if_else.rs  03round.rs  04ownership.rs  05slice.rs  06struct.rs  complex_module.rs  guess.rs  lib.rs  main.rs  request.rs
src/complex_module/: module1.rs  module2.rs
src/complex_module/module1/: hello.rs  world.rs
src/complex_module/module2/: fine.rs
(+8 files in other folders)
