[package]
name = "rust-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
# opt-level越大，优化越多，编译越慢
opt-level = 3

[dependencies]
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
libc = "0.2.119"

[workspace]
# 只有members的依赖才是相互隔离的，因此members的子成员才算真正的模块
members = [
    "simple",
    "module2",
    "coroutine"
]