[package]
name = "module1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
module2 = { path = "../28c_call_rust" }
#当module2跟module1有相同依赖时，cargo会自动统一这些依赖的版本
libc = "0.2.119"

[target."cfg(windows)".dependencies.kernel32-sys]
version = "0.2.2"
[target."cfg(windows)".dependencies.winapi]
version = "0.2.2"

[build-dependencies]
cc = "1.0.73"
rustversion = "1.0.6"